<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_qr"
            android:title="@string/qr_item" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_user"
            android:title="@string/user_item" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history_item" />

        <item

            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_item" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help_item" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about_item" />
    </group>
</menu>
