<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSecondary"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/newUserRegistrationText"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="50dp"
        android:textColor="?attr/colorOnSecondary"
        android:textColorHint="?attr/colorOnSecondary"
        android:theme="@style/MyEditText"
        app:backgroundTint="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

    <EditText
        android:layout_width="300dp"
        android:id="@+id/userMail"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:textColor="?attr/colorOnSecondary"
        android:theme="@style/MyEditText"
        android:textColorHint="?attr/colorOnSecondary"
        app:backgroundTint="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBtn"
        android:layout_width="342dp"
        android:layout_height="60dp"
        android:layout_marginBottom="270dp"
        android:text="@string/ok"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>