<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".activities.AuthActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ContryCodeEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/line"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:hint="Код страны"
        android:text="+7"
        android:textColor="?attr/colorOnSecondary"
        android:textColorHint="?attr/colorOnSecondary"
        android:textSize="20sp"
        android:theme="@style/MyEditText"
        app:layout_constraintBottom_toTopOf="@+id/phoneTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSecondary"
        app:boxBackgroundMode="outline"
        app:errorIconDrawable="@drawable/ic_baseline_phone_24"
        app:errorTextColor="@color/blue"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/CountryCodeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CountryCodeEditText"
        app:layout_constraintTop_toTopOf="@+id/CountryCodeEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_mask"
            android:inputType="phone"
            android:maxLength="15"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="?attr/colorOnSecondary"
            android:theme="@style/MyEditText"
            app:backgroundTint="?attr/colorOnSecondary" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CountryCodeEditText"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:maxLength="6"
        android:textColor="?attr/colorOnSecondary"
        android:theme="@style/MyEditText"
        app:backgroundTint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/continueBtn"
        app:layout_constraintEnd_toStartOf="@+id/phoneTextInputLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        android:layout_width="0dp"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:text="@string/verificationPhoneText"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ContryCodeEditText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/ok"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
